# surveys-app

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: db.py  main.py
src/application/use_cases/: create_survey.py
src/domain/entities/: option.py  survey.py  user.py  vote.py
src/domain/entities/value_objects/: entity_id.py
src/infrastructure/config/: settings.py
src/infrastructure/db/: session.py
src/interfaces/api/: app.py
src/interfaces/api/routers/: __init__.py  db_check.py  health.py
tests/: test_create_survey.py
tests/fakes/: fake_survey_repo.py
