[tool.poetry]
name = "my-surveys-app"
version = "0.1.0"
description = ""
authors = ["Brian Retamar <brianretamar0101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
python-dotenv = "^1.1.0"
pydantic-settings = "^2.9.1"
pydantic = "^2.11.4"
alembic = "^1.15.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

[tool.black]
line-length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
